--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Цайгер Юрій Петрович</title>
-    <link rel="stylesheet" href="https://yurii20000.github.io/p/foot.css"> <!-- Підключення CSS стилів -->
+    <link rel="stylesheet" href="https://ansts-a.github.io/a/style.css"> <!-- Підключення CSS стилів -->
 </head>
 <body>
     <header>
