--- a/lab1.html
+++ b/lab1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Реєстрація</title>
-    <link rel="stylesheet" href="https://Ansts-a.github.io/a/styles1.css"> <!-- Підключення CSS-стилів -->
+    <link rel="stylesheet" href="https://Ansts-a.github.io/a/style1.css"> <!-- Підключення CSS-стилів -->
 </head>
 <body>
     
