--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
     <section id="labs">
         <h2>Лабораторні заняття</h2>
         <ul>
-            <li><a href="labs/lab1/lab1.html">Лабораторне заняття 1</a> - Короткий опис завдання.</li>
-            <li><a href="labs/lab2/lab2.html">Лабораторне заняття 2</a> - Короткий опис завдання.</li>
-            <li><a href="labs/lab3/lab3.html">Лабораторне заняття 3</a> - Короткий опис завдання.</li>
-            <li><a href="labs/lab4/lab4.html">Лабораторне заняття 4</a> - Короткий опис завдання.</li>
-            <li><a href="labs/lab5/lab5.html">Лабораторне заняття 5</a> - Короткий опис завдання.</li>
-            <li><a href="labs/lab6/lab6.html">Лабораторне заняття 6</a> - Короткий опис завдання.</li>
-            <li><a href="labs/lab7/lab7.html">Лабораторне заняття 7</a> - Короткий опис завдання.</li>
+            <li><a href="https://ansts-a.github.io/a/lab1.html">Лабораторне заняття 1</a> - Короткий опис завдання.</li>
+            <li><a href="https://ansts-a.github.io/a/lab2.html">Лабораторне заняття 2</a> - Короткий опис завдання.</li>
+            <li><a href="lhttps://ansts-a.github.io/a/lab3.html">Лабораторне заняття 3</a> - Короткий опис завдання.</li>
+            <li><a href="lhttps://ansts-a.github.io/a/lab4.html">Лабораторне заняття 4</a> - Короткий опис завдання.</li>
+            <li><a href="lhttps://ansts-a.github.io/a/lab5.html">Лабораторне заняття 5</a> - Короткий опис завдання.</li>
+            
             <!-- Додайте інші лабораторні заняття -->
         </ul>
     </section>
