--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <ul>
             <li><a href="https://ansts-a.github.io/a/lab1.html">Лабораторне заняття 1</a> - Короткий опис завдання.</li>
             <li><a href="https://ansts-a.github.io/a/lab2.html">Лабораторне заняття 2</a> - Короткий опис завдання.</li>
-            <li><a href="lhttps://ansts-a.github.io/a/lab3.html">Лабораторне заняття 3</a> - Короткий опис завдання.</li>
-            <li><a href="lhttps://ansts-a.github.io/a/lab4.html">Лабораторне заняття 4</a> - Короткий опис завдання.</li>
-            <li><a href="lhttps://ansts-a.github.io/a/lab5.html">Лабораторне заняття 5</a> - Короткий опис завдання.</li>
+            <li><a href="https://ansts-a.github.io/a/lab3.html">Лабораторне заняття 3</a> - Короткий опис завдання.</li>
+            <li><a href="https://ansts-a.github.io/a/lab4.html">Лабораторне заняття 4</a> - Короткий опис завдання.</li>
+            <li><a href="https://ansts-a.github.io/a/lab5.html">Лабораторне заняття 5</a> - Короткий опис завдання.</li>
             
             <!-- Додайте інші лабораторні заняття -->
         </ul>
